Added code to index and added images folder

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
 <!DOCTYPE html>
+<!-- ICS20-Unit1-03-HTML-Style -->
+<html lang="en-ca">
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="My first webpage with proper style">
+    <meta name="keyword" content="immaculata ics2o">
+    <meta name="author" content="KestrelBryce">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Webpage with Proper Style</title>>
+  </head>
+  <style>
+    <#my-header>
+    background-color: rgb(181,75,213)
+    color: hsl(286, 62.2%, 56.5%)
+    padding: 40px;
+    text-align: center;
+    </#my-header>
+  </style>
+    <body style="background-color:skyblue;">
+    <h1 id="my-header">Style is important</h1>
+    <p>
+      <a href="cities.html">My Cities Page</a>
+    </p>
+    <img src="./images/HTML-style-guide.jpeg" alt="HTML Style Guide">
+    </body>
+</html>
